#4567: Radcliffe 2: Fix editor post title alignment

--- a/radcliffe-2/assets/css/editor-style.css
+++ b/radcliffe-2/assets/css/editor-style.css
@@ -71,10 +71,6 @@ Description: Used to style Gutenberg Blocks in the editor.
 	}
 }
 
-.edit-post-visual-editor .editor-post-title {
-	max-width: 100%;
-}
-
 /* Headings */
 
 .edit-post-visual-editor h1,
